# signal_quality

./: .gitignore  CLAUDE.md  LICENSE  README.md  pixi.toml  pyproject.toml
notebooks/: quality_report.ipynb
notebooks/nbconvert_templates/quality_report_pdf/: conf.json  index.tex.j2
signal_quality/: __init__.py  export.py  filters.py  montage.py  report.py  synthetic.py
signal_quality/core/: blocks.py  context.py  frame.py  intervals.py  metric.py  recording.py
signal_quality/io/: __init__.py  load.py  xltek.py
signal_quality/metrics/: __init__.py  amplitude.py  integrity.py  spatial.py  spectral.py
signal_quality/viz/: __init__.py  _scale.py  heatmap.py  psd.py  timeline.py  topomap.py  traces.py
tests/: conftest.py  test_blocks.py  test_compose.py  test_decoupling.py  test_filters.py  test_integrity.py  test_metrics.py  test_montage.py  test_report.py  test_spectral_window.py  test_synthetic.py  test_viz.py
